feat: added support for composite ids on JDBC level (covered with CompositeIdTest)